# reversing-forum

./: .env.example  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  models.py  oauth.py  utils.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: index.tsx
frontend/src/components/: Header.tsx  LoginForm.tsx
frontend/src/components/molecules/: LoginFields.tsx
frontend/src/components/organisms/: Header.tsx  LoginForm.tsx  UserProfile.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  RegisterPage.tsx
